# pycicd

./: db.sqlite3  pyproject.toml
.github/workflows/: azure-app-service-deploy.yml
django_project/: settings.py
infra/app-specific/: main.tf  variables.tf  versions.tf
infra/app-specific/environments/: dev1.tfbackend  dev1.tfvars
infra/entra-github/: Integrate-GitHub.ps1  credential.json
infra/project-baseline/: .gitignore  .terraform.lock.hcl  main.tf  variables.tf
infra/project-baseline/environments/: dev1.tfbackend  dev1.tfvars
src/django-app/: pyproject.toml  startup.sh
src/django-app/django_app/: settings.py
