[project]
name = "django-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "gunicorn",
    "whitenoise",
    "psycopg2-binary",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
]
